mudancas css menu e slide

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
         </div>
     </header>
     <section class="menu">
-        <div>
+        <div class="menuItem">
             <a href="https://developers.google.com/books/docs/overview?hl=pt-br">API Google Books</a>
+            <img src="imagens/import_contacts_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" alt="">
         </div>
-        <div>
-            <a href="">blabla</a>
+        <div class="links">
+            <a href="https://books.google.com.br/">Google Books</a>
+            <p>|</p>
+            <a href="https://developers.google.com/books/docs/v1/reference/bookshelves?hl=pt-br">Referência</a>
+            <p>|</p>
+            <a href="https://developers.google.com/books/docs/v1/libraries?hl=pt-br">Amostras</a>
         </div>
     </section>
     <section>
