html e css do rodape da página

--- a/index.html
+++ b/index.html
@@ -39,5 +39,34 @@
         <h2 id="resultado"></h2>
         <div class="container"></div>
     </section>
+    <footer>
+        <div class="rodapeT">
+            <p>API Books v1</p>
+            <p>Conectar</p>
+            <p>Parâmetros</p>
+            <p>Informações </p>
+        </div>
+        <div class="rodapeL">
+            <div class="linksR">
+                <p>Visão Geral</p>
+                <p>Como começar</p>
+                <p>Desempenho</p>
+            </div>
+            <div class="linksR">
+                <p>Fóruns da API</p>
+            </div>
+            <div class="linksR">
+                <p>Download</p>
+                <p>Filter</p>
+                <p>LangRestrict</p>
+                <p>MaxResults</p>
+                <p>OrderBy</p>
+            </div>
+            <div class="linksR">
+                <p>Termos de Serviço</p>
+                <p>Estudos de casos</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
