--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API Google Books</title>
+    <link rel="shortcut icon" href="imagens/import_contacts_24dp_FFFFFF_FILL0_wght400_GRAD0_opsz24.png" type="image/x-icon">
     <script src="jquery-3.7.1.min.js"></script>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="reset.css">
